istio/destinationrules-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: red-mesh-web-1-dr
spec:
  host: red-mesh-web-1
  subsets:
  - name: v1
    labels:
      version: '1.0'
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
#        simple: RANDOM
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: red-mesh-web-2-dr
spec:
  host: red-mesh-web-2
  subsets:
  - name: v2
    labels:
      version: '2.0'
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: red-mesh-web-3-dr
spec:
  host: red-mesh-web-3
  subsets:
  - name: v3
    labels:
      version: '3.0'
